syntax = "proto3";
package path.qos.framework;

option go_package = "github.com/buildwithgrove/path/observation/qos/framework";

import "path/qos/framework/endpoint_sanction.proto"; // import Sanction definitions

// EndpointErrorKind identifies different kinds of endpoint data errors.
enum EndpointErrorKind {
  ENDPOINT_ERROR_KIND_UNSPECIFIED = 0;
  ENDPOINT_ERROR_KIND_EMPTY_PAYLOAD = 1;      // Empty payload from endpoint.
  ENDPOINT_ERROR_KIND_UNMARSHALING = 2;       // Could not parse endpoint payload.
  ENDPOINT_ERROR_KIND_VALIDATION_ERR = 3;     // Parsed endpoint payload failed JSONRPC response validation.
  ENDPOINT_ERROR_KIND_INVALID_RESULT = 4;     // Payload result doesn't match expected value: to be used by the Custom QoS implementation.
}

// EndpointError contains error details for endpoint queries.
message EndpointError {
  // Specifies the kind of endpoint eror observed.
  // Example: Returned payload cannot be parsed into a JSONRPC response.
  EndpointErrorKind error_kind = 1;

  // Description set by the custom service implementation
  string description = 2;
  
  // RecommendedSanction set by the custom service implementation
  // Only set if the endpoint error has fetched it a sanction.
  optional Sanction recommended_sanction = 3;
}
