syntax = "proto3";
package path.qos.framework;

option go_package = "github.com/buildwithgrove/path/observation/qos/framework";

import "google/protobuf/timestamp.proto";
import "path/qos/framework/endpoint_error.proto";  // Import endpoint error definitions.
import "path/qos/framework/jsonrpc.proto";  // Import jsonrpc definitions.

// EndpointQueryResult captures data extracted from an endpoint query.
// - Stores one or more string/integer values.
// - Contains error/sanction information on endpoint error.
message EndpointQueryResult {
  // Address of the endpoint that handled the request
  string endpoint_addr = 1;

  // JSONRPC response to send to client.
  // Parsed from service endpoint's payload.
  optional JsonRpcResponse jsonrpc_response = 2;

  // The set of values/attributes extracted from the endpoint query 
  // and the endpoint's parsed JSONRPC response
  map<string, string> string_values = 3;
  map<string, int64> int_values = 4;

  // Captures the queried endpoint's error
  // Only set if the query result indicates an endpoint error
  optional EndpointError endpoint_error = 5;

  // The time at which the query result is expired
  google.protobuf.Timestamp expiry_time = 6;
}


